# soft_cache_gemm

./: .gitignore  CMakeLists.txt  README.md
app/: gemm.plain.dram.cpp  gemm.plain.fam.cpp  gemm_doublebuffer_demo_v2.cpp  gemm_doublebuffer_parallel_compute_drive_v0.command_option.cpp  gemm_doublebuffer_parallel_compute_drive_v0.cpp  gemm_doublebuffer_parallel_compute_drive_v1_omp.cpp  gemm_doublebuffer_parallel_ii_v0.cpp  gemm_doublebuffer_parallel_jj_v0.cpp  gemm_rapid.buffer_size.omp.cpp  gemm_rapid.buffer_size.seq.cpp  gemm_rapid.cpp  gemm_rapid.tile-512.cpp  gemm_test_correct.cpp
include/: background_thread.h  gemm.h  soft_cache.h
local_stuff/pg00_plain/: run00.plain.sh  run01.plain.clang.sh
local_stuff/pg01_doublebuffer_cpp/: run00.doublebuffer.cpp.gcc.sh  run01.doublebuffer.cpp.clang.sh
local_stuff/pg02_parallel_doublebuffer_v1/note/: aux.cpp
local_stuff/pg02_parallel_doublebuffer_v1_jj/: run00.doublebuffer.parallel_jj.sh
local_stuff/pg02_parallel_doublebuffer_v1_jj/note/: main.cpp
local_stuff/pg03_parallel_doublebuffer_v2_ii/: run00.doublebuffer.parallel_ii.sh
local_stuff/pg04_parallel_doublebuffering_v3_copy_drive/note/: aux.cpp  main.cpp
local_stuff/pg05_parallel_doublebuffering_v4_compute_drive/: run00.doublebuffer.parallel.compute_drive.sh
local_stuff/pg05_parallel_doublebuffering_v4_compute_drive/note/: compute.cpp
local_stuff/pg06_parallel_doublebuffering_v5_compute_drive_v1_omp/: run00.doublebuffer.parallel.compute_drive.sh
local_stuff/pg07_perf_parallel_doublebuffer_v0_compute_drive/: py00.perf_event.py  run00.gemm.doublebuffer.omp.tile_size.perf_events.sh
local_stuff/scf_code/: mult_dense_matrix.perf.default.size16.ta.IndexTree.mlir  mult_dense_matrix.perf.default.size16.ta.LLVM.mlir  mult_dense_matrix.perf.default.size16.ta.SCF.mlir  mult_dense_matrix.perf.default.size16.ta.TensorAlgebra.mlir  mult_dense_matrix.perf.rapid.size16.ta.IndexTree.mlir  mult_dense_matrix.perf.rapid.size16.ta.LLVM.mlir  mult_dense_matrix.perf.rapid.size16.ta.SCF.mlir  mult_dense_matrix.perf.rapid.size16.ta.TensorAlgebra.mlir  run00.run_mlir.sh  scf00.sanity_check.mlir.LLVM.mlir  scf01.double_buffer_gemm.v1.mlir.LLVM.mlir  scf02.double_buffer_gemm.v2.matrix.mlir.LLVM.mlir  scf03.double_buffer_gemm.v3.rapid.mlir.LLVM.mlir  scf04.double_buffer_gemm.v4.cppthread.mlir.LLVM.mlir
local_stuff/scf_code/code/: scf00.sanity_check.mlir  scf01.double_buffer_gemm.v1.mlir  scf02.double_buffer_gemm.v2.matrix.mlir  scf03.double_buffer_gemm.v3.rapid.mlir  scf04.double_buffer_gemm.v4.cppthread.mlir
local_stuff/scf_code/dialects/: mult_dense_matrix.perf.default.size16.ta  mult_dense_matrix.perf.rapid.size16.ta
local_stuff/scf_parallel_doublebuffering_compute_worker_drive/: run01.ta_each_step.sh  scf00.parallel_compute_workers.mlir.LLVM.mlir
local_stuff/scf_parallel_doublebuffering_compute_worker_drive/code/: scf00.parallel_compute_workers.mlir  scf00.parallel_compute_workers.v2.mlir  scf00.parallel_compute_workers.v3.async_group.mlir
local_stuff/scf_parallel_doublebuffering_compute_worker_drive/notes/: sh00.generate_sizes.sh
local_stuff/softcache/: run00.softcache.sh  run01.double_buffer.tile-512.sh  run02.double_buffer.mix.sh
local_stuff/softcache/note/: pseudocode.gemm_soft-cache.cpp  tmp.cpp
src/: background_thread.cpp  gemm.cpp  soft_cache.cpp
